# TypingPractice

./: Cargo.toml  data.txt
src/: main.rs
